manifests/media/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: media
  annotations:
    ignore-check.kube-linter.io/no-rolling-update-strategy: "Using Recreate strategy to avoid issues with Sqlite volumes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autobrr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:latest@sha256:0b8b997c40424557a4bd688a4cb487dd8a765a69b5aa5b003c0d8106f6a895af
          restartPolicy: Always
          ports:
            - name: autobrr
              containerPort: 7474
              protocol: TCP
          volumeMounts:
            - name: autobrr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            tcpSocket:
              port: 7474
          readinessProbe:
            tcpSocket:
              port: 7474
      volumes:
        - name: autobrr-config
          persistentVolumeClaim:
            claimName: autobrr-config
        - name: tmp
          emptyDir: {}
