manifests/media/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: media
spec:
  selector:
    app: autobrr
  ports:
    - name: autobrr
      port: 7474
      targetPort: 7474
