manifests/media/autobrr/route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - autobrr.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: autobrr
          port: 7474
